--- a/practice_html/join.html
+++ b/practice_html/join.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>회원가입</title>
     <style>
         fieldset {
             width: 800px;
@@ -10,33 +10,26 @@
     </style>
 </head>
 <body>
-<header>
-    <h1>회원가입</h1>
+<h1>회원가입</h1>
+<form action="">
     <p>원활한 서비스를 이용을 위해 회원가입을 해주세요</p>
-</header>
-<main>
-    <div>
-        <label for="id">아이디</label>
-        <input type="text" id="id" name="id">
-    </div>
-    <div>
-        <label for="email">이메일</label>
-        <input type="email" id="email" name="email">
-    </div>
-    <div>
-        <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password">
-    </div>
-    <div>
-        <label for="nickname">닉네임</label>
-        <input type="text" id="nickname" name="nickname">
-    </div>
+    <label for="id">아이디</label>
+    <input type="text" id="id" name="id" required>
+
+    <label for="email">이메일</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="password">비밀번호</label>
+    <input type="password" id="password" name="password" required>
+
+    <label for="nickname">닉네임</label>
+    <input type="text" id="nickname" name="nickname">
 
     <fieldset>
         <legend>성별</legend>
         <ul>
             <li>
-                <input type="radio" name="gender" value="male" id="male">
+                <input type="radio" name="gender" value="male" id="male" required>
                 <label for="male">남성</label>
             </li>
             <li>
@@ -49,41 +42,40 @@
             </li>
         </ul>
     </fieldset>
-
     <fieldset>
         <legend>사용 기술</legend>
         <ul>
             <li>
-                <input type="checkbox" name="html" id="html">
+                <input type="checkbox" name="skill" id="html">
                 <label for="html">HTML</label>
             </li>
             <li>
-                <input type="checkbox" name="css" id="css">
+                <input type="checkbox" name="skill" id="css">
                 <label for="css">CSS</label>
             </li>
             <li>
-                <input type="checkbox" name="javascript" id="javascript">
+                <input type="checkbox" name="skill" id="javascript">
                 <label for="javascript">JavaScript</label>
             </li>
             <li>
-                <input type="checkbox" name="python" id="python">
+                <input type="checkbox" name="skill" id="python">
                 <label for="python">Python</label>
             </li>
             <li>
-                <input type="checkbox" name="django" id="django">
+                <input type="checkbox" name="skill" id="django">
                 <label for="django">Django</label>
             </li>
             <li>
-                <input type="checkbox" name="github" id="github">
+                <input type="checkbox" name="skill" id="github">
                 <label for="github">Github</label>
             </li>
             <li>
-                <input type="checkbox" name="postgresql" id="postgresql">
+                <input type="checkbox" name="skill" id="postgresql">
                 <label for="postgresql">PostgreSQL</label>
             </li>
         </ul>
     </fieldset>
     <button>회원가입</button>
-</main>
+</form>
 </body>
 </html>
