--- a/practice_html/login.html
+++ b/practice_html/login.html
@@ -5,27 +5,16 @@
     <title>로그인</title>
 </head>
 <body>
-<header>
     <h1>로그인</h1>
-    <p>아이디와 비밀번호를 입력하고 로그인하세요</p>
-</header>
-<main>
     <form action="" method="post">
-        <div>
-            <label for="id">아이디</label>
-            <input id="id" type="text" name="id">
-        </div>
-        <div>
-            <label for="password">비밀번호</label>
-            <input id="password" type="text" name="password">
-        </div>
-        <div>
-            <input id="save" type="checkbox">
-            <label for="save">아이디 저장</label>
-        </div>
-
-    <button>로그인</button>
+        <p>아이디와 비밀번호를 입력하고 로그인하세요</p>
+        <label for="id">아이디</label>
+        <input id="id" type="text" name="id" required>
+        <label for="password">비밀번호</label>
+        <input id="password" type="text" name="password" required>
+        <input id="save" type="checkbox">
+        <label for="save">아이디 저장</label>
+        <button>로그인</button>
     </form>
-</main>
 </body>
 </html>
